[project]
name = "trello-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "seria", email = "seria.ati@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["aiohttp>=3.0.0, <4.0.0", "pydantic>=2.0.0, <3.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trello"]

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"
